Modify (overloaded) methods parameters to provide support for Object type parameters, not primitive -Treat boxing warnings true -> Boolean.TRUE -minor changes Case: SVY-2782